--- a/dsandml/lda/index.qmd
+++ b/dsandml/lda/index.qmd
@@ -11,7 +11,7 @@ listing:
     contents: "/../../dsandml"
     max-items: 3
     type: grid
-    categories: false
+    categories: true
     date-format: full
     fields: [image, date, title, author, reading-time]  
 format: 
