--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,8 @@
----
-toc: false
----  
-
+  
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6878992848042528"
      crossorigin="anonymous"></script>  
 
-## Rafiq Islam  
+<h2> Rafiq Islam</h2>  
 <p style="text-align: justify"><img align="right" src='/_assets/images/profile.png' class='oval-image' alt='Profile Picture' style='align-right; margin-left: 25px; margin-bottom: 10px;'><br>
     Ph.D. Candidate in Mathematics  
     <a href='https://fsu.edu' target='_blank' style='text-decoration:none'>Florida State University</a><br>
