--- a/dsandml/lda/index.qmd
+++ b/dsandml/lda/index.qmd
@@ -15,8 +15,25 @@ listing:
     date-format: full
     fields: [image, date, title, author, reading-time]  
 format: 
-    html: 
+    html: default
+    ipynb: default
+    docx: 
       toc: true
+      adsense:
+        enable-ads: false
+    epub:
+      toc: true
+      adsense:
+        enable-ads: false
+    pdf: 
+      toc: true
+      pdf-engine: pdflatex
+      adsense:
+        enable-ads: false
+      number-sections: false
+      colorlinks: true
+      cite-method: biblatex
+toc-depth: 4
 ---  
 
 ## Introduction  
