--- a/dsandml/simplelinreg/index.qmd
+++ b/dsandml/simplelinreg/index.qmd
@@ -17,6 +17,23 @@ listing:
 format: 
     html: default
     ipynb: default
+    docx: 
+      toc: true
+      adsense:
+        enable-ads: false
+    epub:
+      toc: true
+      adsense:
+        enable-ads: false
+    pdf: 
+      toc: true
+      pdf-engine: pdflatex
+      adsense:
+        enable-ads: false
+      number-sections: false
+      colorlinks: true
+      cite-method: biblatex
+toc-depth: 4
 ---  
  
 
